<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.lab.lazyinstagram.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:backgroundTint="#207ab1"
                    android:gravity="top"></Spinner>

                <Button
                    android:id="@+id/btnFollow"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:backgroundTint="#eef1f2"
                    android:text="@string/follow"
                    android:textColor="#207ab1"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/posts"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFlwing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/following"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFlwer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/follower"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/tvUsername"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="120dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="Name"-->
    <!--android:textSize="18sp" />-->

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/description"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#207ab1"
        android:backgroundTint="#eef1f2"
        android:text="@string/change_viewtype" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
